--- a/app/src/main/assets/lichkin.properties
+++ b/app/src/main/assets/lichkin.properties
@@ -1,1 +1,2 @@
-lichkin.framework.app.baseUrl=http://server.lichkin.com:8080
+lichkin.framework.api.baseUrl=http://192.168.111.200:18010
+lichkin.framework.api.timeout=15
