--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
     // https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api
     implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    // https://github.com/lzyzsd/JsBridge
+    implementation 'com.github.lzyzsd:JsBridge:1.0.4'
 }
