--- a/app/src/main/assets/lichkin.properties
+++ b/app/src/main/assets/lichkin.properties
@@ -1,2 +1,3 @@
-lichkin.framework.api.baseUrl=http://192.168.111.200:18010
+lichkin.framework.api.baseUrl=http://192.168.111.201:8080
 lichkin.framework.api.timeout=15
+lichkin.framework.test.webView=false
