support multiple retrofit instances

--- a/app/src/main/assets/lichkin.properties
+++ b/app/src/main/assets/lichkin.properties
@@ -2,3 +2,6 @@ lichkin.framework.api.baseUrl=http://192.168.111.201:8080
 lichkin.framework.api.timeout=15
 lichkin.framework.test.webView=false
 lichkin.framework.test.retrofit=false
+lichkin.framework.apis=LichKin
+lichkin.framework.api.baseUrl.LichKin=http://192.168.111.201:8080
+lichkin.framework.api.timeout.LichKin=15
