--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,16 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    // thirdparty
     // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
-    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     // https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-jackson
-    implementation group: 'com.squareup.retrofit2', name: 'converter-jackson', version: '2.4.0'
+    implementation 'com.squareup.retrofit2:converter-jackson:2.4.0'
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
+    compileOnly 'org.projectlombok:lombok:1.16.20'
     // https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api
-    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
     // https://github.com/lzyzsd/JsBridge
     implementation 'com.github.lzyzsd:JsBridge:1.0.4'
     // https://github.com/81813780/AVLoadingIndicatorView
