--- a/app/src/main/assets/lichkin.properties
+++ b/app/src/main/assets/lichkin.properties
@@ -1,6 +1,7 @@
 lichkin.framework.api.baseUrl=http://192.168.111.201:8080
 lichkin.framework.api.timeout=15
 lichkin.framework.test.webView=false
+lichkin.framework.test.webView.url=http://192.168.111.201:8080/test/app/index.html
 lichkin.framework.test.retrofit=false
 lichkin.framework.apis=LichKin
 lichkin.framework.api.baseUrl.LichKin=http://192.168.111.201:8080
