--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,8 @@ dependencies {
     implementation 'com.wang.avi:library:2.1.3'
     // https://github.com/apl-devs/AppIntro
     implementation 'com.github.apl-devs:appintro:v4.2.3'
+    // https://github.com/square/picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    // https://github.com/youth5201314/banner
+    implementation 'com.youth.banner:banner:1.4.10'
 }
