--- a/app/src/main/assets/lichkin.properties
+++ b/app/src/main/assets/lichkin.properties
@@ -1,5 +1,6 @@
 lichkin.framework.api.baseUrl=http://192.168.111.201:8080
 lichkin.framework.api.timeout=15
+lichkin.framework.api.banner.ratio=9/16
 lichkin.framework.test.webView=false
 lichkin.framework.test.webView.url=http://192.168.111.201:8080/test/app/index.html
 lichkin.framework.test.retrofit=false
