--- a/app/src/main/assets/lichkin.properties
+++ b/app/src/main/assets/lichkin.properties
@@ -7,3 +7,4 @@ lichkin.framework.test.retrofit=false
 lichkin.framework.apis=LichKin
 lichkin.framework.api.baseUrl.LichKin=http://192.168.111.201:8080
 lichkin.framework.api.timeout.LichKin=15
+lichkin.framework.news.image.position.top=false
