--- a/app/src/main/assets/lichkin.properties
+++ b/app/src/main/assets/lichkin.properties
@@ -8,3 +8,6 @@ lichkin.framework.apis=LichKin
 lichkin.framework.api.baseUrl.LichKin=http://192.168.111.201:8080
 lichkin.framework.api.timeout.LichKin=15
 lichkin.framework.news.image.position.top=false
+lichkin.framework.page.test=true
+lichkin.framework.page.baseUrl=http://192.168.111.201:8080
+lichkin.framework.page.suffix=.html
