--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     // https://github.com/youth5201314/banner
     implementation 'com.youth.banner:banner:1.4.10'
+    // https://github.com/DreaminginCodeZH/MaterialRatingBar
+    implementation 'me.zhanghai.android.materialratingbar:library:1.3.1'
 }
