--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.16.20'
     // https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    // https://github.com/JakeWharton/butterknife
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife-compiler:8.8.1'
     // https://github.com/lzyzsd/JsBridge
     implementation 'com.github.lzyzsd:JsBridge:1.0.4'
     // https://github.com/81813780/AVLoadingIndicatorView
