--- a/app/src/main/assets/lichkin.properties
+++ b/app/src/main/assets/lichkin.properties
@@ -4,6 +4,7 @@ lichkin.framework.api.banner.ratio=9/16
 lichkin.framework.test.webView=false
 lichkin.framework.test.webView.url=http://192.168.111.201:8080/test/app/index.html
 lichkin.framework.test.retrofit=false
+lichkin.framework.test.form=false
 lichkin.framework.apis=LichKin
 lichkin.framework.api.baseUrl.LichKin=http://192.168.111.201:8080
 lichkin.framework.api.timeout.LichKin=15
