--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,18 @@
         <activity
             android:name="com.lichkin.application.activities.AboutActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name="com.lichkin.application.activities.FastLoginActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.lichkin.application.activities.SmsValidateActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.lichkin.application.activities.SupplementRegisterInfoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.lichkin.application.activities.AccountLoginActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
