implement comp page, comp news page, comp workflow page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,9 @@
         <activity
             android:name="com.lichkin.application.activities.AccountLoginActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name="com.lichkin.application.activities.CompNewsActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
