--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        release {
+            keyAlias 'lichkin_demo'
+            keyPassword '********'
+            storeFile file('C:/Android/lichkin_demo.jks')
+            storePassword '********'
+        }
+        debug {
+            keyAlias 'lichkin_demo_debug'
+            keyPassword '********'
+            storeFile file('C:/Android/lichkin_demo_debug.jks')
+            storePassword '********'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.lichkin.app.android.demo"
@@ -18,6 +32,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
     }
 }
 
