config release environment properties

--- a/app/src/main/assets/lichkin.properties
+++ b/app/src/main/assets/lichkin.properties
@@ -1,4 +1,4 @@
-lichkin.framework.api.baseUrl=http://192.168.111.201:8080
+lichkin.framework.api.baseUrl=http://api.yoorenle.com
 lichkin.framework.api.timeout=15
 lichkin.framework.api.banner.ratio=9/16
 lichkin.framework.test.webView=false
@@ -6,9 +6,9 @@ lichkin.framework.test.webView.url=http://192.168.111.201:8080/test/app/index.ht
 lichkin.framework.test.retrofit=false
 lichkin.framework.test.form=false
 lichkin.framework.apis=LichKin
-lichkin.framework.api.baseUrl.LichKin=http://192.168.111.201:8080
+lichkin.framework.api.baseUrl.LichKin=http://api.lichkin.com
 lichkin.framework.api.timeout.LichKin=15
 lichkin.framework.news.image.position.top=false
-lichkin.framework.page.test=true
-lichkin.framework.page.baseUrl=http://192.168.111.201:8080
+lichkin.framework.page.test=false
+lichkin.framework.page.baseUrl=http://api.yoorenle.com
 lichkin.framework.page.suffix=.html
