dynamic tabs. server API debug.

--- a/app/src/main/assets/lichkin.properties
+++ b/app/src/main/assets/lichkin.properties
@@ -1,14 +1,13 @@
-lichkin.framework.api.baseUrl=http://api.yoorenle.com
+lichkin.framework.api.baseUrl=http://api.yoorenle.cn/yoorenle-api/
 lichkin.framework.api.timeout=15
 lichkin.framework.api.banner.ratio=9/16
 lichkin.framework.test.webView=false
-lichkin.framework.test.webView.url=http://192.168.111.201:8080/test/app/index.html
-lichkin.framework.test.retrofit=false
+lichkin.framework.test.webView.url=http://api.yoorenle.cn/yoorenle-api/test.dhtml
+lichkin.framework.test.retrofit=true
 lichkin.framework.test.form=false
 lichkin.framework.apis=LichKin
-lichkin.framework.api.baseUrl.LichKin=http://api.lichkin.com
+lichkin.framework.api.baseUrl.LichKin=http://api.yoorenle.cn/yoorenle-api/
 lichkin.framework.api.timeout.LichKin=15
 lichkin.framework.news.image.position.top=false
 lichkin.framework.page.test=false
-lichkin.framework.page.baseUrl=http://api.yoorenle.com
-lichkin.framework.page.suffix=.html
+lichkin.framework.page.baseUrl=http://api.yoorenle.cn/yoorenle-api/
