对接新版接口

--- a/app/src/main/assets/lichkin.properties
+++ b/app/src/main/assets/lichkin.properties
@@ -1,3 +1,4 @@
+lichkin.framework.app.token=LichKin
 lichkin.framework.api.baseUrl=http://192.168.111.200:18888/EMPLOYEE
 lichkin.framework.api.timeout=15
 lichkin.framework.api.banner.ratio=9/16
