--- a/app/src/main/assets/lichkin.properties
+++ b/app/src/main/assets/lichkin.properties
@@ -1,14 +1,14 @@
 lichkin.framework.app.token=LichKin
-lichkin.framework.api.baseUrl=http://192.168.111.200:18888/EMPLOYEE
+lichkin.framework.api.baseUrl=http://apis.yoorenle.cn
 lichkin.framework.api.timeout=15
 lichkin.framework.api.banner.ratio=9/16
 lichkin.framework.test.webView=false
-lichkin.framework.test.webView.url=http://192.168.111.200:18888/EMPLOYEE/test.dhtml
+lichkin.framework.test.webView.url=http://apis.yoorenle.cn/test.dhtml
 lichkin.framework.test.retrofit=false
 lichkin.framework.test.form=false
 lichkin.framework.apis=LichKin
-lichkin.framework.api.baseUrl.LichKin=http://192.168.111.200:18888/EMPLOYEE
+lichkin.framework.api.baseUrl.LichKin=http://apis.yoorenle.cn
 lichkin.framework.api.timeout.LichKin=15
 lichkin.framework.news.image.position.top=false
 lichkin.framework.page.test=false
-lichkin.framework.page.baseUrl=http://192.168.111.200:18888/EMPLOYEE
+lichkin.framework.page.baseUrl=http://apis.yoorenle.cn
