--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,15 @@ android {
     signingConfigs {
         release {
             keyAlias 'lichkin_demo'
-            keyPassword '********'
+            keyPassword 'P@$5w0rd'
             storeFile file('C:/Android/lichkin_demo.jks')
-            storePassword '********'
+            storePassword 'P@$5w0rd'
         }
         debug {
             keyAlias 'lichkin_demo_debug'
-            keyPassword '********'
+            keyPassword 'P@$5w0rd'
             storeFile file('C:/Android/lichkin_demo_debug.jks')
-            storePassword '********'
+            storePassword 'P@$5w0rd'
         }
     }
     compileSdkVersion 27
@@ -26,6 +26,9 @@ android {
         vectorDrawables.useSupportLibrary = true
         javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
         multiDexEnabled true
+        ndk {
+            abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "x86", "arm64-v8a", "x86_64"
+        }
     }
     buildTypes {
         release {
@@ -37,6 +40,11 @@ android {
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
+    }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
     }
 }
 
@@ -80,4 +88,9 @@ dependencies {
     implementation 'com.youth.banner:banner:1.4.10'
     // https://github.com/DreaminginCodeZH/MaterialRatingBar
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.1'
+
+    //AMap
+    implementation 'com.amap.api:location:latest.integration'
+    //implementation 'com.amap.api:map2d:latest.integration'
+    //implementation 'com.amap.api:search:latest.integration'
 }
